Dashboard Sidebar Issue(sidebar collapsed on nav-dropdown parent items click, overflow-auto on more nav-items) - Fixed

--- a/assets/css/all-listings.css
+++ b/assets/css/all-listings.css
@@ -18452,6 +18452,7 @@ Review: New Style
   left: 0;
   border-radius: 16px;
   overflow: hidden;
+  overflow-y: auto;
   background-color: #fff;
   -webkit-box-shadow: var(--directorist-box-shadow);
           box-shadow: var(--directorist-box-shadow);
