--- a/assets/src/scss/component/user-dashboard/_sidebar.scss
+++ b/assets/src/scss/component/user-dashboard/_sidebar.scss
@@ -7,6 +7,7 @@
     left: 0;
     border-radius: 16px;
     overflow: hidden;
+    overflow-y: auto;
     background-color: #fff;
     box-shadow: var(--directorist-box-shadow);
     @media only screen and (max-width: 1199px) {
